workloads/networkpolicies/manifest/kube-system.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: kube-system
  name: apiserver-egress-kube-system
spec:
  endpointSelector:
    matchLabels: {}
  egress:
  - toEntities:
    - kube-apiserver
